# cmate

./: .gitignore  .lintrunner.toml  README.md  README_CN.md  README_en.md  cmate_rebase.sh  pyproject.toml  test.json  test.py
ConfigChecker/: cli.py  rule.yaml  tokenizer.py
agent-skill/: README.md
agent-skill/Cmate-Skill/: SKILL.md
agent-skill/Cmate-Skill/examples/: env-vars-excel.md  json-config-csv.md  multi-scenario.md  vllm-serving-config.md
agent-skill/Cmate-Skill/references/: cmate-syntax.md  column-mapping.md
cmate/: __init__.py  _ast.py  _test.py  cmate.py  custom_fn.py  data_source.py  lexer.py  parser.py  util.py  visitor.py
docs/en/: quick_start.md
docs/zh/: quick_start.md
presets/: mindie.cmate  mindie_ep_extension.cmate
test/: test_lexer.py  test_parser.py
tests/: test_ast.py  test_cmate.py  test_custom_fn.py  test_data_source.py  test_env_script.py  test_lexer.py  test_parser.py  test_test.py  test_util.py  test_visitor.py
tools/linter/adapters/: flake8_linter.py  pyfmt_linter.py
