[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmate"
version = "1.0.0"
description = "CMate - declarative configuration validation engine"
readme = "README_en.md"
requires-python = ">=3.7"
dependencies = [
    "ply",
    "psutil",
    "pyyaml",
    "colorama"
]

[project.scripts]
cmate = "cmate.cmate:main"

[tool.setuptools]
packages = {find = {}}
