[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmate"
version = "0.1.0"
description = "CMate rule validator and test runner"
requires-python = ">=3.7"
dependencies = [
    "ply",
    "psutil",
    "pyyaml",
    "msguard"
]

[project.scripts]
cmate = "cmate.cmate:main"

[tool.setuptools]
packages = {find = {}}
