[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmate"
version = "0.2.0"
description = "CMate rule validator and test runner"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ply",
    "psutil",
    "pyyaml",
    "msguard",
    "colorama"
]

[project.scripts]
cmate = "cmate.cmate:main"

[tool.setuptools]
packages = {find = {}}
